--- a/404.html
+++ b/404.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/" />
+    <meta charset="utf-8" />
+    <title>Redirecting...</title>
+    <script type="text/javascript">
+      const redirectTo = window.location.pathname + window.location.search + window.location.hash;
+      sessionStorage.redirect = redirectTo;
+      window.location.href = "/";
+    </script>
   </head>
   <body></body>
 </html>
