--- a/404.html
+++ b/404.html
@@ -4,9 +4,17 @@
     <meta charset="utf-8" />
     <title>Redirecting...</title>
     <script type="text/javascript">
-      const redirectTo = window.location.pathname + window.location.search + window.location.hash;
-      sessionStorage.redirect = redirectTo;
-      window.location.href = "/";
+      (function() {
+        const redirect = sessionStorage.redirect;
+        if (redirect) {
+          delete sessionStorage.redirect;
+          window.history.replaceState(null, null, redirect);
+        } else {
+          sessionStorage.redirect =
+            window.location.pathname + window.location.search + window.location.hash;
+          window.location.replace("/");
+        }
+      })();
     </script>
   </head>
   <body></body>
